force-app/main/default/objects/Inventory_Transfer__c/Inventory_Transfer__c.object-meta.xml
<CustomObject>
    <label>Inventory Transfer</label>
    <nameField>
        <displayFormat>XFER-{0000}</displayFormat>
        <label>Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Transfers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>