force-app/main/default/objects/Inventory_Transfer__c/fields/Estimated_Arrival__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Arrival__c</fullName>
    <label>Estimated Arrival</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>