force-app/main/default/objects/Inventory_Transfer__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <label>ETA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>