force-app/main/default/objects/Inventory_Transfer__c/fields/Fulfillment_Type__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Type__c</fullName>
    <label>Fulfillment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inter-Store Transfer</fullName>
                <default>true</default>
                <label>Inter-Store Transfer</label>
            </value>
            <value>
                <fullName>Warehouse Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>