force-app/main/default/objects/Inventory_Transfer__c/fields/Requesting_Location__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requesting Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Incoming Inventory Transfers</relationshipLabel>
    <relationshipName>Incoming_Inventory_Transfers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>