force-app/main/default/objects/Inventory_Transfer__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SKU</label>
    <referenceTo>SKU__c</referenceTo>
    <relationshipLabel>Inventory Transfers</relationshipLabel>
    <relationshipName>Inventory_Transfers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>