force-app/main/default/objects/Inventory_Transfer__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Outgoing Inventory Transfers</relationshipLabel>
    <relationshipName>Outgoing_Inventory_Transfers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>